static/style.css
.theme-toggle-btn {
	position: fixed;
	top: 12px;
	right: 16px;
	width: 38px;
	height: 38px;
	padding: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	border: none;
}

#loading-spinner {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% { transform: translate(-50%, -50%) rotate(0deg); }
    100% { transform: translate(-50%, -50%) rotate(360deg); }
}

.alert {
	width: 700px;
	position: absolute;
	top: 20px;
	right: 40px;
	z-index: 10;
	overflow: hidden;
}

.progress {
	height: 100%;
}

#pageInfo {
	z-index: 1;
	position: absolute;
	top: 20%;
	width: 100%;
	height: 80%;
	text-align: center;
	font-size: 15px;
	overflow: hidden;
}

.video-container {
	position: relative;
	width: 100%;
	padding-bottom: 100%;
}

.video-container video {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: contain;
}

.card-body.reviewed {
	/* these clips were already reviewed */
	background-color: rgb(224, 245, 255);
}

[data-bs-theme=dark] .card-body.reviewed {
	/* these clips were already reviewed */
	background-color: rgb(0, 42, 61);
}

.card-body textarea {
	height: 1em;
}

